download link activated

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <!-- Begin Social -->
           <div class="social">
             <ul>
-              <li><a class='north' href="#" title="Download .pdf"><img src="images/icn-save.jpg" alt="Download the pdf version" /></a></li>
+              <li><a class='north' href="Resume/Omkar_Nibandhe_Resume.pdf" download title="Resume.pdf"><img src="images/icn-save.jpg" alt="Download the pdf version" /></a></li>
               <li><a class='north' href="javascript:window.print()" title="Print"><img src="images/icn-print.jpg" alt="" /></a></li>
               <li><a class='north' id="contact" href="contact/index.html" title="Contact Me"><img src="images/icn-contact.jpg" alt="" /></a></li>
-              <li><a class='north' href="#" title="Follow me on LinkedIn"><img src="images/linkedin.png" alt="" /></a></li>
+              <li><a class='north' href="http://www.linkedin.com/in/omkarnibandhe" target="_newtab"" title="Follow me on LinkedIn"><img src="images/linkedin.png" alt="" /></a></li>
              
             </ul>
           </div>
