line fix. hr properties

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <li class="ad">Binghamton, NY</li>
               <li class="mail">oniband1@binghamton.edu</li>
               <li class="tel">+1(607)297-0816</li>
-              <li class="web">http://www.linkedin.com/in/omkarnibandhe</li>
+              <li class="web"><a href="http://www.linkedin.com/in/omkarnibandhe" color = #black>http://www.linkedin.com/in/omkarnibandhe</a></li>
             </ul>
           </div>
           <!-- End Personal Information -->
