--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
           <!-- End Image -->
           <!-- Begin Personal Information -->
           <div class="self">
-            <h1 class="name">Omkar Nibandhe <br />
+            <h1 class="name">OMKAR NIBANDHE <br />
               <span>Software Developer/Engineer</span></h1>
+			  <span>Masters in Science</span></h1>
             <ul>
               <li class="ad">Binghamton, NY</li>
               <li class="mail">oniband1@binghamton.edu</li>
